# prompt_engineering_tests

./: .cruft.json  CONTRIBUTING.md  README.md  pyproject.toml
docs/: conf.py  index.rst
src/prompt_engineering_tests/: __init__.py  main.py
src/{{ cookiecutter.project_name|lower()|replace(' ', '_')|replace('-', '_') }}/: cli.py
tests/: __init__.py
