[tool.poetry]
name = "prompt_engineering_tests"
version = "0.0.0"
description = "prompt_engineering_tests"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.1"
click = "*"
importlib-metadata = "^4.8.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"
tox = ">=3.25.1"
sphinx = {version = ">=6.1.3", extras = ["docs"]}
sphinx-rtd-theme = {version = ">=1.0.0", extras = ["docs"]}
sphinx-autodoc-typehints = {version = ">=1.2.0", extras = ["docs"]}
sphinx-click = {version = ">=4.3.0", extras = ["docs"]}
myst-parser = {version = ">=0.18.1", extras = ["docs"]}


[tool.poetry.scripts]
prompt_engineering_tests = "{{ cookiecutter.project_name|lower()|replace(' ', '_')|replace('-', '_') }}.cli:main"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "myst-parser"
    ]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
