[tool.poetry]
name = "prompt_engineering_tests"
version = "0.0.0"
description = "prompt_engineering_tests"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.1"
jupyter = {version = "^1.0.0", optional=true}
appdirs = "^1.4.4"
openai = "^0.27.7"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "myst-parser"
    ]
tests = ["pytest", "jupyter"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
